[build]- gradle init

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/intellij,eclipse,gradle,git,java
+# Ignore Gradle build output directory
+build
