--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
-}
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'}
 
 tasks.named('test') {
     // Use junit platform for unit tests.
