--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
+
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
