--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,12 +17,12 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 
-    // Use JUnit Jupiter Engine for testing.
+    // Use JUnit Jupiter API for testing.
+    testImplementation (platform('org.junit:junit-bom:5.8.2'))
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
+    testImplementation 'org.junit.vintage:junit-vintage-engine'
 
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
