--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.junit.vintage:junit-vintage-engine'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+
 
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
