--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,6 +25,12 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
     implementation 'commons-codec:commons-codec:1.15'
+
+    //Hibernate Validator
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
+    implementation 'org.glassfish:javax.el:3.0.0'
+
 }
 
 
